package(default_visibility = ["//visibility:public"])

scala_library(
    name = "agg=bazel/migrator_bazel/migrator/transform_build/maven/analysis",
    srcs = [
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator:sources",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/transform:sources",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/build/maven/analysis:sources",
    ],
    resources = [
        "//workspaces-resolution/src/main:tools_bazel_scripts",
    ],
    runtime_deps = [
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-api/src/main/scala/com/wixpress/build/maven",
        "//dependency-resolver/maven-dependency-resolver/src/main/scala/com/wixpress/build/maven",
        "//dependency-synchronizer/bazel-deps-synchronizer/src/main/scala/com/wixpress/build/bazel",
        "//dependency-synchronizer/bazel-deps-synchronizer/src/main/scala/com/wixpress/build/sync",
        "//migrator/bazel-external-graph-transformer/src/main/scala/com/wix/bazel/migrator/transform",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
        "//migrator/bazel-migrator/src/main/java/com/wix/bazel/migrator/transform",
        "//migrator/wix-bazel-migrator:main_dependencies",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/external/registry",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/overrides",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/utils",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/workspace/resolution",
        "//models/maven-bazel-model-translation/src/main/scala/com/wix/build/maven/translation",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
        "//repo-analyzer/maven-repo-analyzer/src/main/java/com/wix/build/maven/analysis",
        "//repo-analyzer/maven-repo-analyzer/src/main/java/com/wix/build/zinc/analysis",
        "//workspaces-resolution-utils/src/main/scala/com/wixpress/build/bazel/workspaces",
        "@com_codota_codota_sdk_java",
        "@com_fasterxml_jackson_core_jackson_annotations",
        "@com_fasterxml_jackson_core_jackson_core",
        "@com_fasterxml_jackson_core_jackson_databind",
        "@com_fasterxml_jackson_module_jackson_module_scala_2_12",
        "@com_github_pathikrit_better_files_2_12",
        "@com_github_scopt_scopt_2_12",
        "@junit_junit",
        "@org_apache_maven_maven_artifact",
        "@org_slf4j_slf4j_api",
    ],
)
