package(default_visibility = ["//visibility:public"])

scala_specs2_junit_test(
    name = "migrator",
    size = "small",
    srcs = [
        "//migrator/wix-bazel-migrator/src/test/scala/com/wix/bazel/migrator:sources",
    ],
    data = ["//migrator/wix-bazel-migrator:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //migrator/wix-bazel-migrator:coordinates)"],
    prefixes = ["Test"],
    suffixes = ["Test"],
    tags = ["UT"],
    runtime_deps = [
    ],
    deps = [
        "//migrator/wix-bazel-migrator:tests_dependencies",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix:agg=bazel/migrator_bazel/migrator/tinker_bazel/migrator/transform_build/maven/analysis",
        "//third_party/com/github/marschall:memoryfilesystem",
        "//third_party/com/github/pathikrit:better_files_2_12",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/wix-bazel-migrator/src/test/scala/com/wix/bazel/migrator:__pkg__"],
)
