package(default_visibility = ["//visibility:public"])

specs2_unit_test(
    name = "migrator",
    srcs = [
        "//migrator/wix-bazel-migrator/src/test/scala/com/wix/bazel/migrator:sources",
    ],
    data = ["//migrator/wix-bazel-migrator:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //migrator/wix-bazel-migrator:coordinates)"],
    runtime_deps = [
    ],
    deps = [
        "//migrator/wix-bazel-migrator:tests_dependencies",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix:agg=bazel/migrator_bazel/migrator/tinker_bazel/migrator/transform_build/maven/analysis",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/overrides",
        "@com_github_marschall_memoryfilesystem",
        "@com_github_pathikrit_better_files_2_12",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/wix-bazel-migrator/src/test/scala/com/wix/bazel/migrator:__pkg__"],
)
