package(default_visibility = ["//visibility:public"])

scala_library(
    name = "transform",
    srcs = [
        "//migrator/bazel-external-graph-transformer/src/main/scala/com/wix/bazel/migrator/transform:sources",
    ],
    runtime_deps = [
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-api/src/main/scala/com/wixpress/build/maven",
        "//migrator/bazel-external-graph-transformer:main_dependencies",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
        "//models/maven-bazel-model-translation/src/main/scala/com/wix/build/maven/translation",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
    ],
)

sources()
