package(default_visibility = ["//visibility:public"])

scala_library(
    name = "model",
    srcs = [
        "//migrator/bazel-migrator-model-testkit/src/main/java/com/wix/bazel/migrator/model:sources",
    ],
    runtime_deps = [
    ],
    deps = [
        "//migrator/bazel-migrator-model-testkit:main_dependencies",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/bazel-migrator-model-testkit/src/main/java/com/wix/bazel/migrator/model:__pkg__"],
)
