package(default_visibility = ["//visibility:public"])

scala_library(
    name = "model",
    srcs = [
        "//migrator/bazel-migrator-model-testkit/src/main/java/com/wix/bazel/migrator/model:sources",
    ],
    runtime_deps = [
    ],
    deps = [
        "//migrator/bazel-migrator-model-testkit:main_dependencies",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
        "@org_specs2_specs2_common_2_12",
        "@org_specs2_specs2_fp_2_12",
        "@org_specs2_specs2_matcher_2_12",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/bazel-migrator-model-testkit/src/main/java/com/wix/bazel/migrator/model:__pkg__"],
)
