package(default_visibility = ["//visibility:public"])

scala_library(
    name = "transform",
    srcs = [
        "//migrator/bazel-migrator/src/main/java/com/wix/bazel/migrator/transform:sources",
    ],
    runtime_deps = [
    ],
    deps = [
        "//migrator/bazel-migrator:main_dependencies",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/bazel-migrator/src/main/java/com/wix/bazel/migrator/transform:__pkg__"],
)
