package(default_visibility = ["//visibility:public"])

scala_library(
    name = "transform",
    srcs = [
        "//migrator/bazel-migrator/src/main/java/com/wix/bazel/migrator/transform:sources",
    ],
    runtime_deps = [
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-api/src/main/scala/com/wixpress/build/maven",
        "//migrator/bazel-migrator:main_dependencies",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
        "//migrator/bazel-migrator/src/main/java/com/wix/bazel/migrator/analyze",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
        "@org_jgrapht_jgrapht_core",
    ],
)

sources()
