package(default_visibility = ["//visibility:public"])

scala_specs2_junit_test(
    name = "transform",
    size = "small",
    srcs = [
        "//migrator/bazel-migrator/src/test/java/com/wix/bazel/migrator/transform:sources",
    ],
    data = ["//migrator/bazel-migrator:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //migrator/bazel-migrator:coordinates)"],
    prefixes = ["Test"],
    suffixes = ["Test"],
    tags = ["UT"],
    runtime_deps = [
    ],
    deps = [
        "//migrator/bazel-migrator:tests_dependencies",
        "//migrator/bazel-migrator-model-testkit/src/main/java/com/wix/bazel/migrator/model",
        "//migrator/bazel-migrator-model-testkit/src/main/java/com/wix/bazel/migrator/model/makers",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
        "//migrator/bazel-migrator/src/main/java/com/wix/bazel/migrator/transform",
        "//migrator/bazel-migrator/src/test/java/com/wix/bazel/migrator/transform/makers",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/bazel-migrator/src/test/java/com/wix/bazel/migrator/transform:__pkg__"],
)
