package(default_visibility = ["//visibility:public"])

specs2_ite2e_test(
    name = "e2e",
    srcs = [
        "//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/e2e:sources",
    ],
    data = ["//migrator/wix-bazel-migrator:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //migrator/wix-bazel-migrator:coordinates)"],
    runtime_deps = [
    ],
    deps = [
        "//migrator/wix-bazel-migrator:tests_dependencies",
        "//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/workspace",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix:agg=bazel/migrator_bazel/migrator/tinker_bazel/migrator/transform_build/maven/analysis",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/e2e:__pkg__"],
)
