package(default_visibility = ["//visibility:public"])

scala_library(
    name = "matchers",
    testonly = 1,
    srcs = [
        "//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/matchers:sources",
    ],
    runtime_deps = [
    ],
    deps = [
        "//migrator/wix-bazel-migrator:tests_dependencies",
        "//third_party/com/wixpress/hoopoe:hoopoe_specs2",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/matchers:__pkg__"],
)
