package(default_visibility = ["//visibility:public"])

scala_library(
    name = "matchers",
    testonly = 1,
    srcs = [
        "//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/matchers:sources",
    ],
    runtime_deps = [
    ],
    deps = [
        "//migrator/wix-bazel-migrator:tests_dependencies",
        "@org_specs2_specs2_fp_2_12",
        "@org_specs2_specs2_matcher_2_12",
    ],
)

sources()
