package(default_visibility = ["//visibility:public"])

specs2_mixed_test(
    name = "overrides",
    srcs = [
        "//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/overrides:sources",
    ],
    data = ["//migrator/wix-bazel-migrator:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //migrator/wix-bazel-migrator:coordinates)"],
    runtime_deps = [
    ],
    deps = [
        "//repo-analyzer/maven-repo-analyzer/src/main/java/com/wix/build/maven/analysis",
        "//dependency-resolver/maven-dependency-resolver-testkit/src/main/scala/com/wixpress/build/maven",
        "//dependency-synchronizer/bazel-deps-synchronizer/src/main/scala/com/wixpress/build/bazel",
        "//migrator/wix-bazel-migrator:tests_dependencies",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/overrides:overrides",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
        "@com_fasterxml_jackson_core_jackson_annotations//:com_fasterxml_jackson_core_jackson_annotations",
        "@com_fasterxml_jackson_core_jackson_core//:com_fasterxml_jackson_core_jackson_core",
        "@com_fasterxml_jackson_core_jackson_databind//:com_fasterxml_jackson_core_jackson_databind",
        "@com_fasterxml_jackson_module_jackson_module_scala_2_12//:com_fasterxml_jackson_module_jackson_module_scala_2_12",
        "@com_github_marschall_memoryfilesystem//:com_github_marschall_memoryfilesystem",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/overrides:__pkg__"],
)
