package(default_visibility = ["//visibility:public"])

scala_specs2_junit_test(
    name = "transform",
    srcs = [
        "//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/transform:sources",
    ],
    data = ["//migrator/wix-bazel-migrator:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //migrator/wix-bazel-migrator:coordinates)"],
    prefixes = [
        "IT",
        "E2E",
    ],
    suffixes = [
        "IT",
        "E2E",
    ],
    tags = [
        "E2E",
        "IT",
        "block-network",
    ],
    runtime_deps = [
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-testkit/src/main/scala/com/wixpress/build/maven",
        "//migrator/bazel-migrator-model-testkit/src/main/java/com/wix/bazel/migrator/model/makers",
        "//migrator/bazel-migrator-model/src/main/java/com/wix/bazel/migrator/model",
        "//migrator/bazel-migrator/src/main/java/com/wix/bazel/migrator/transform",
        "//migrator/wix-bazel-migrator:tests_dependencies",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix:agg=bazel/migrator+bazel/migrator/transform+build/maven/analysis",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
        "//repo-analyzer/maven-repo-analyzer/src/main/java/com/wix/build/maven/analysis",
        "//third_party/com/fasterxml/jackson/core:jackson_annotations",
        "//third_party/com/fasterxml/jackson/core:jackson_core",
        "//third_party/com/fasterxml/jackson/core:jackson_databind",
        "//third_party/com/fasterxml/jackson/module:jackson_module_scala_2_12",
        "//third_party/com/github/marschall:memoryfilesystem",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/transform:__pkg__"],
)
