package(default_visibility = ["//visibility:public"])

specs2_mixed_test(
    name = "transform",
    srcs = [
        "//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/transform:sources",
    ],
    data = ["//migrator/wix-bazel-migrator:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //migrator/wix-bazel-migrator:coordinates)"],
    runtime_deps = [
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-testkit/src/main/scala/com/wixpress/build/maven",
        "//dependency-synchronizer/bazel-deps-synchronizer/src/main/scala/com/wixpress/build/bazel",
        "//migrator/wix-bazel-migrator:tests_dependencies",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix:agg=bazel/migrator_bazel/migrator/tinker_bazel/migrator/transform_build/maven/analysis",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
        "//repo-analyzer/maven-repo-analyzer/src/main/java/com/wix/build/maven/analysis",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/transform:__pkg__"],
)
