package(default_visibility = ["//visibility:public"])

specs2_mixed_test(
    name = "transform",
    srcs = [
        "//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/utils:sources",
    ],
    data = ["//migrator/wix-bazel-migrator:coordinates"],
    jvm_flags = ["-Dexisting.manifest=$(location //migrator/wix-bazel-migrator:coordinates)"],
    runtime_deps = [
    ],
    deps = [
        "//dependency-resolver/maven-dependency-resolver-testkit/src/main/scala/com/wixpress/build/maven",
        "//migrator/wix-bazel-migrator/src/main/java/com/wix/bazel/migrator/utils",
        "//models/maven-model/src/main/scala/com/wixpress/build/maven",
        "@com_github_marschall_memoryfilesystem",
    ],
)

filegroup(
    name = "sources",
    srcs = glob(["*.java"]) + glob(["*.scala"]),
    visibility = ["//migrator/wix-bazel-migrator/src/it/java/com/wix/bazel/migrator/utils:__pkg__"],
)
